--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">sawithub</string>
+    <string name="logo_sawithub">logo sawithub</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login_statement">Belum punya akun? Daftar</string>
+    <string name="signup_statement">Sudah punya akun? Masuk</string>
+    <string name="copyright">copyright2023 - sawithub</string>
+    <string name="login">Login</string>
+    <string name="email">email</string>
+    <string name="password">password</string>
+    <string name="lupa_password">lupa password</string>
+    <string name="email_hint">input your email</string>
+    <string name="password_hint">input your password</string>
 </resources>
