add fragment home scan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="email_hint">input your email</string>
     <string name="password_hint">input your password</string>
     <string name="daftar">Daftar</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_scan">Scan</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
