add toast message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="konsul">Konsul</string>
     <string name="ambil_foto">Ambil Foto</string>
     <string name="scan">Scan</string>
+    <string name="preview_image">preview image</string>
 
     <string-array name="name_artikel">
         <item>Tips Cara Tanam Sawit Yang Baik Dan Benar</item>
